stirlingpdf/templates/stirlingpdf-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: stirlingpdf-ingressroute
  namespace: stirlingpdf
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: PathPrefix(`/stirlingpdf`)
      services:
      - kind: Service
        name: stirling-pdf
        port: 8080
